<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CadastrarProdutos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.conta.CadastrarLocacao"
    android:background="@color/white">

    <TextView
        android:id="@+id/textItem"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/chewy"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageUpload"
        android:layout_width="229dp"
        android:layout_height="124dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="38dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imageUpload"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/nomeLocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textItem"
        app:srcCompat="@drawable/ic_baseline_photo_camera" />

    <EditText
        android:id="@+id/descricao"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="Descricao"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/endereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nomeLocal"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/editText"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/endereco"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="Endereço"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/preco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/preco"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="@string/editTextValor"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/TipoPropriedade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TipoPropriedade"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="27dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="Tipo de Propriedade"
        app:layout_constraintBottom_toTopOf="@+id/Disponibilidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Disponibilidade"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/chewy"
        android:hint="Esta Disponivel"
        app:layout_constraintBottom_toTopOf="@+id/buttonInserir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonInserir"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/chewy"
        android:text="@string/buttonInserir"
        android:textSize="20sp"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>